# PersAI

./: CONTRIBUTING.md  LICENSE  README.md
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/docs/: overview.md  testing.md
backend/persai/: logging.py
backend/persai/agent/: __init__.py  agent.py  config.py  llamastack.yaml.j2  tools.py
backend/persai/errors/: __init__.py  exception_handlers.py  exceptions.py
backend/persai/server/: __init__.py  auth.py  endpoints.py  server.py  token_validator.py
backend/scripts/: testenv-setup.sh
backend/tests/integration/: __init__.py  conftest.py  llamastack.test.yaml  test_server.py
backend/tests/unit/: conftest.py
backend/tests/unit/agent/: test_config.py  test_llamastack.py  test_promtool.py  test_tools.py
backend/tests/unit/server/: test_auth.py  test_endpoints.py  test_server.py  test_token_validator.py
frontend/: README.md  jest.config.ts  package-lock.json  package.json  rsbuild.config.ts
frontend/cue.mod/: module.cue
frontend/docs/: overview.md  testing.md
frontend/src/: setup-tests.ts
frontend/src/explore/: index.ts
frontend/src/explore/persai-explorer/: PersaiExplorer.test.tsx  PersaiExplorer.tsx  api.test.ts  api.ts  index.ts  test-utils.tsx  types.ts
frontend/src/explore/persai-explorer/components/: Messages.tsx  ToolCall.tsx
